Fix overflow behavior from scroll to hidden

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -38,7 +38,7 @@
   height: 72vh;
   display: flex;
   flex-direction: column;
-  overflow: scroll;
+  overflow: auto;
   gap: 0.8rem;
 }
 
